# douka_plugin_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: clang_format.cmake  cppcheck.cmake  dependencies.cmake
param/: param.filter-enkf.json  param.init.json  param.obsgen.json  param.predict.json
scripts/: clean.sh  init.sh  obsgen.sh  run.sh
src/: plugin.cc
